--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "multicast-dns",
   "version": "6.1.1",
   "description": "Low level multicast-dns implementation in pure javascript",
-  "main": "index.js",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "scripts": {
-    "test": "tsc && tape dist/test.js"
+    "test": "tsc && node dist/tests/test.js"
   },
-  "bin": "cli.js",
+  "bin": "./src/cli.js",
   "dependencies": {
     "@types/node": "^7.0.13",
     "@types/tape": "^4.2.29",
     "dns-packet": "dror/dns-packet",
+    "tape": "^4.6.3",
     "thunky": "^0.1.0",
     "typescript": "^2.2.2"
   },
