--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "multicast-dns",
   "version": "6.1.1",
+  "contributors": [
+    "Dror Gluska <drorgl@yahoo.com>"
+  ],
   "description": "Low level multicast-dns implementation in pure javascript",
   "main": "./dist/src/index.js",
   "types": "./dist/src/index.d.ts",
@@ -11,7 +14,7 @@
   "dependencies": {
     "@types/node": "^7.0.13",
     "@types/tape": "^4.2.29",
-    "dns-packet": "dror/dns-packet",
+    "dns-packet": "drorgl/dns-packet",
     "tape": "^4.6.3",
     "thunky": "^0.1.0",
     "typescript": "^2.2.2"
@@ -22,14 +25,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mafintosh/multicast-dns.git"
+    "url": "https://github.com/drorgl/multicast-dns.git"
   },
   "author": "Mathias Buus (@mafintosh)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mafintosh/multicast-dns/issues"
+    "url": "https://github.com/drorgl/multicast-dns/issues"
   },
-  "homepage": "https://github.com/mafintosh/multicast-dns",
+  "homepage": "https://github.com/drorgl/multicast-dns",
   "keywords": [
     "multicast",
     "dns",
